Task5/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: front-end-app
  labels:
    app: front-end
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: back-end-api-app
  labels:
    app: back-end-api
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: admin-front-end-app
  labels:
    app: admin-front-end
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: admin-back-end-api-app
  labels:
    app: admin-back-end-api
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
