Task5/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: back-end-api-service
spec:
  selector:
    app: back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-service
spec:
  selector:
    app: admin-front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-service
spec:
  selector:
    app: admin-back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
