Task5/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-end-back-end-api
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: back-end-api
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-back-end-api-front-end
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: front-end
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-front-end-back-end-api
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: admin-front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-back-end-api
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-back-end-api-front-end
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: admin-front-end
  policyTypes:
  - Ingress
